fix text align

--- a/src/widgets/widget-quizcard/WidgetQuizcard.module.css
+++ b/src/widgets/widget-quizcard/WidgetQuizcard.module.css
@@ -15,6 +15,7 @@
 .header__office {
     font-size: 32px;
     font-weight: 400;
+    text-align: left;
     color: #D3A096;
 }
 
